agregada seccion recetas alternativas y footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,9 @@
 .fondoNav{
     background-color: #373A3C !important;
 }
+.fondoFooter{
+    background-color: #DC3545;
+}
 
 .bold-hr {
     border: 0;
